# Gnosi

./: .gitignore  AGENTS.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-release.yml
apps/gnosi/: .aiexclude  .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  debug_chat.py  deploy.sh  docker-compose.yml  force_mail_sync.py  import_opml.py  migrate_to_keychain.py  requirements.txt  run_dev.sh  test_pkg.py
apps/gnosi/backend/: app.py  emergency_cleanup.py  server.py
apps/gnosi/config/: logger_config.py  params.yaml.example
apps/gnosi/data/: scheduler_config.json
apps/gnosi/electron/: .gitignore  README.md  build-all.sh  build-python.sh  build.sh  electron-builder.yml  main.js  package.json  preload.js  release.sh
apps/gnosi/frontend/: index.html  package-lock.json  package.json  test-graph-fix.cjs  test_exports.cjs  test_menu.mjs  test_parse.js  test_schema.mjs  test_spec.js  vite.config.js
apps/gnosi/mcp-servers/drupal-proxy/: .tools_cache.json  README.md  config.yaml  pyproject.toml
apps/gnosi/mcp-servers/drupal-proxy/drupal_mcp_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/gnosi/mcp-servers/drupal-proxy/drupal_proxy/: __init__.py  client.py  search.py  server.py
apps/gnosi/pipeline/: ai_client.py  notion_api.py
apps/mcp-drupal-proxy/: docker-compose.yml
apps/n8n-server/: .gitignore  docker-compose.yml
apps/sandbox/: test_table_customization.js
scripts/: audit_notion.py  backfill_script.py  list_notion_nodes.py  update_workflow_logic.py
(+236 files in other folders)
